objects/SDOC__SDTemplate__c.object
<CustomObject>
    <fields>
        <fullName>OUV_Document_Template__c</fullName>
        <label>OUV Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Document_Template</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Loan_Agreement_Category__c</fullName>
        <label>VLA Template (PDF Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Loan_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Loan_Agreement_Language__c</fullName>
        <label>VLA Email &amp; Instructions Language (HTML)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <label>OUV Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Template_Market__c</fullName>
        <label>Template Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
</CustomObject>